besu/backups/besu-services.yaml
# Template para geração dinâmica via envsubst e shell
# Este arquivo será gerado dinamicamente pelo script de deploy

# Para cada node, o script irá gerar um bloco como este:
# (Exemplo para RPC, WS e GraphQL)

---
apiVersion: v1
kind: Service
metadata:
  name: besu-node1-rpc
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node1-0
  ports:
    - name: rpc-http
      port: 8545
      targetPort: 8545
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: besu-node1-ws
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node1-0
  ports:
    - name: rpc-ws
      port: 8546
      targetPort: 8546
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: besu-node1-graphql
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node1-0
  ports:
    - name: graphql
      port: 8547
      targetPort: 8547
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: besu-node2-rpc
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node2-0
  ports:
    - name: rpc-http
      port: 8545
      targetPort: 8545
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: besu-node2-ws
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node2-0
  ports:
    - name: rpc-ws
      port: 8546
      targetPort: 8546
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: besu-node2-graphql
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node2-0
  ports:
    - name: graphql
      port: 8547
      targetPort: 8547
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: besu-node3-rpc
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node3-0
  ports:
    - name: rpc-http
      port: 8545
      targetPort: 8545
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: besu-node3-ws
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node3-0
  ports:
    - name: rpc-ws
      port: 8546
      targetPort: 8546
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: besu-node3-graphql
  namespace: paladin
spec:
  selector:
    statefulset.kubernetes.io/pod-name: besu-node3-0
  ports:
    - name: graphql
      port: 8547
      targetPort: 8547
      protocol: TCP
